--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.4.0"
+    "react-horizontal-scrolling": "^0.1.9",
+    "react-horizontal-scrolling-menu": "^3.2.0",
+    "react-icons": "^4.4.0",
+    "react-scroll-horizontal": "^1.6.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
